# tidal

./: .floo  .gitignore  CMakeLists.txt  TidalConfig.h.in  http-client.env.json  tidal.config
.cmake/api/v1/reply/: cache-v2-0ac6fe49254dd417d1d7.json  cache-v2-90100d547fec53498b57.json  cmakeFiles-v1-0ae055700ab49b900d2e.json  cmakeFiles-v1-72917900c3eb30fc6bdc.json  codemodel-v2-1f226e8929f7c385377b.json  codemodel-v2-a209dbcc5c75c7c54b86.json  index-2023-09-16T20-12-11-0871.json  index-2023-10-16T00-31-29-0300.json  target-tests-7053a4842e8c12cd4d3b.json  target-tests-Debug-04966a2eeedfc2ab310a.json  target-tidal-Debug-405769957e93b818e0bb.json  target-tidal-a2dc38c153d2640e15a7.json
docs/: DisplayDataClasses.puml  DisplayDataClassesAlt.puml  DisplayDataShape.json  DisplayUpdateSequence.puml  LunarDataETL.puml  README.md  RawTideData.json  RawWeatherData.json  TideDataETL.puml  WeatherDataETL.puml
include/nlohmann/: json.hpp
src/: main.cpp  tidal.config
src/app/: Application.cpp  Application.h  DisplayData.cpp  DisplayData.h  DisplayManager.cpp  DisplayManager.h  FrameBufferOpenException.cpp  FrameBufferOpenException.h  LunarData.cpp  LunarData.h  Retriever.cpp  Retriever.h  Sleeper.cpp  Sleeper.h  TideData.cpp  TideData.h  TideRetriever.cpp  TideRetriever.h  Time.cpp  Time.h  TimeSeriesDataPoint.cpp  TimeSeriesDataPoint.h  WeatherData.cpp  WeatherData.h  WeatherRetriever.cpp  WeatherRetriever.h  root_certificates.h
src/app/config/: AppConfig.cpp  AppConfig.h  ConfigFileNotFoundException.cpp  ConfigFileNotFoundException.h  ConfigReader.cpp  ConfigReader.h  TideConfig.cpp  TideConfig.h  WeatherConfig.cpp  WeatherConfig.h
src/app/lunar/: lunar.cpp  lunar.h
src/app/models/: AggregateWeatherData.cpp  AggregateWeatherData.h  DailyPrediction.cpp  DailyPrediction.h  DisplayData.cpp  DisplayData.h  LunarData.h  LunarPredictions.h  Predictions.cpp  Predictions.h  RawWeatherDatum.h  TideData.cpp  TideData.h  TidePredictions.cpp  WeatherData.cpp  WeatherData.h  WeatherParser.cpp  WeatherParser.h  WeatherPredictions.cpp  WeatherPredictions.h
src/app/models/lunar/: LunarData.cpp  LunarData.h  LunarPredictions.cpp  LunarPredictions.h
src/app/models/tide/: TideData.cpp  TideData.h  TideDataParser.cpp  TideDataParser.h  TidePredictions.cpp  TidePredictions.h
src/app/models/utils/: TimeSeries.cpp  TimeSeries.h
src/app/models/weather/: RawWeatherDatum.cpp  RawWeatherDatum.h  RunLengthEncoding.cpp  RunLengthEncoding.h  WeatherCommon.h  WeatherData.cpp  WeatherData.h  WeatherParser.cpp  WeatherParser.h  WeatherPredictions.cpp  WeatherPredictions.h
src/app/retrievers/: LunarRetriever.cpp  LunarRetriever.h  Retriever.cpp  Retriever.h  TideRetriever.cpp  TideRetriever.h  WeatherRetriever.cpp  WeatherRetriever.h
src/app/translaters/: DataManager.cpp  DataManager.h
tests/: CMakeLists.txt  RawWeatherDatumTests.cpp  RunLengthEncodingTests.cpp  TimeSeriesBackFillTests.cpp  TimeSeriesTests.cpp
